third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/bool/capitalized-true.stderr
TOML parse error at line 1, column 28
  |
1 | capitalized-true         = True
  |                            ^
invalid string
expected `"`, `'`
